      choice, not \command{f95}: set \samp{FC} in \file{config.site} to
      override this if necessary.

      \item Visibility macros such as \samp{C_VISIBILITY} can now be
      user-set  (including to empty), e.g.\sspace{}in \file{config.site}.

      \item Macro \samp{FCLIBS} which has sometimes been needed on
      Solaris has been renamed to \samp{FCLIBS_XTRA}.
    }
  }

  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \strong{N.B.}: The handling of Fortran is \strong{work in
	progress}, with further changes under test.  Code and
      documentation may not be in sync.

      \item The interpretation of source code with extension \file{.f}
      is changing.  Previously this denoted FORTRAN 77 code, but current
      compilers no longer have a FORTRAN 77 mode and interpret it as
      \sQuote{fixed-form} Fortran 90 (or later where supported) code.
      Extensions \file{.f90} and \file{.f95} continue to indicate
      \sQuote{free-form} Fortran code.

      Legal FORTRAN 77 code is also legal fixed-form Fortran 9x; however
      this change legitimizes the use of later features, in particular
      to replace features marked \sQuote{obsolescent} in Fortran 95
      which \command{gfortran} 8.x has started to warn about.

      \item Packages with code in \file{src} with extensions \file{.f90}
      or \file{.f95} are now linked using the C or C++ compiler rather
      than the Fortran 9x compiler.  This is consistent with fixed-form
      Fortran code and allows mixing of C++ and free-form Fortran on
      most platforms.

      Consequentially, packages including free-form Fortran 9x which
      uses OpenMP should include \samp{SHLIB_OPENMP_CFLAGS} (or the
      \samp{CXXFLAGS} version) in \samp{PKG_LIBS} rather than
      \samp{SHLIB_OPENMP_FCFLAGS} --- fortunately on current platforms
      they are the same flag.

      \item The new make macro \samp{F_VISIBILITY} is now preferred for
      both fixed-form and free-form Fortran.
    }
  }