@@ -46,15 +46,11 @@ ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 F_VISIBILITY = @F_VISIBILITY@
-## NB, set FC before F77 as on Solaris make, setting FC sets F77
-## FC is the compiler used for free-form Fortran, exts .f90/.f95
+## FC is the compiler used for all Fortran as from R 3.6.0
 FC = @FC@
 FCFLAGS = @FCFLAGS@ $(LTO)
-FCPICFLAGS = @FCPICFLAGS@
 ## additional libs needed when linking with $(FC), e.g. on some Oracle compilers
 FCLIBS_XTRA = @FCLIBS_XTRA@
-## F77 is the compiler used for fixed-form Fortran, ext .f
-F77 = @F77@
 FFLAGS = @FFLAGS@ $(LTO)
 FLIBS = @FLIBS_IN_SO@
 FPICFLAGS = @FPICFLAGS@
@@ -131,6 +127,9 @@ TCLTK_LIBS = @TCLTK_LIBS@
 YACC = @YACC@
 
 ## Legacy settings
+## set FC before F77 as on Solaris make, setting FC sets F77
+F77 = @FC@
+FCPICFLAGS = @FPICFLAGS@
 F77_VISIBILITY = @F_VISIBILITY@
 FC_VISIBILITY = @F_VISIBILITY@
 
@@ -165,9 +164,9 @@ ALL_LIBS = $(PKG_LIBS) $(SHLIB_LIBADD) $(LIBR)@DYLIB_UNDEFINED_ALLOWED_FALSE@ $(
 .M.o:
 	$(OBJCXX) $(ALL_CPPFLAGS) $(ALL_OBJCXXFLAGS) -c $< -o $@
 .f.o:
-	$(F77) $(ALL_FFLAGS) -c $< -o $@
+	$(FC) $(ALL_FFLAGS) -c $< -o $@
 ## @FCFLAGS_f9x@ are flags needed to recognise the extensions
 .f95.o:
-	$(FC) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
+	$(FC) $(PKG_FCFLAGS) $(FPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f95@ $< -o $@
 .f90.o:
-	$(FC) $(PKG_FCFLAGS) $(FCPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
+	$(FC) $(PKG_FCFLAGS) $(FPICFLAGS) $(FCFLAGS) -c @FCFLAGS_f90@ $< -o $@
